<resources>
    <string name="app_name" translatable="false">Proton VPN</string>
    <string name="app_icon_name_classic">Classic</string>
    <string name="app_icon_name_dark">Dark</string>
    <string name="app_icon_name_retro">Retro</string>
    <string name="app_icon_name_weather">Weather</string>
    <string name="app_icon_name_notes">Notes</string>
    <string name="app_icon_name_calculator">Calculator</string>
    <string name="login">Sign in</string>
    <string name="menuActionSignOut">Sign out</string>
    <string name="connectionAllocationHelpTitle">Thanks for upgrading</string>
    <string name="connectionAllocationHelpDescription1">To start your journey in Proton VPN please assign VPN connections to your account or any other sub-account.</string>
    <string name="connectionAllocationHelpDescription2">This step will take just a few minutes. After that you will be able to sign in and protect all your devices.</string>
    <string name="connectionAllocationHelpDescription1AskAdmin">There is currently no VPN connection enabled for this account. To start your journey with Proton VPN, please contact your administrator. </string>
    <string name="connectionAllocationHelpAssignConnectionsButton">Enable VPN connections</string>
    <string name="connectionAllocationHelpLoginAgainButton">Sign in again</string>
    <string name="ok">OK</string>
    <string name="dialogLearnMore">Learn more</string>
    <string name="connected">Connected</string>
    <string name="buttonConnect">Connect</string>
    <string name="loaderConnectingTo">Connecting to %1$s</string>
    <string name="loaderNotConnected">Not connected (Unprotected)</string>
    <string name="loaderConnectedTo">Connected to %1$s</string>
    <string name="loaderDisconnecting">Disconnecting</string>
    <string name="loaderReconnecting">Reconnecting</string>
    <string name="loaderReconnectNoNetwork">Waiting for usable network</string>
    <string name="loaderCheckingAvailability">Checking server availability</string>
    <string name="quickConnect">Quick connect</string>
    <string name="serverLoad">%1$s%%</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="dialogContinue">Continue</string>
    <string name="drawerReportProblem">Report an issue</string>
    <string name="drawerSignOut">@string/menuActionSignOut</string>
    <string name="action_done">Done</string>
    <string name="action_share">Share</string>
    <string name="accountFree">Proton Free</string>
    <string name="restrictedMaintenanceTitle">Under maintenance</string>
    <string name="restrictedMaintenanceDescription">Server you are currently trying to connect is under maintenance. Please try another server.</string>
    <string name="restricted_location_excluded_dialog_title">Connection failed</string>
    <string name="restricted_location_excluded_dialog_description">No servers available. Choose a location manually or edit your excluded locations.</string>
    <string name="errorUserDelinquent"><![CDATA[Your account currently has an overdue invoice. Please pay all unpaid invoices at&#160;<a href="https://account.protonvpn.com">account.protonvpn.com</a>]]></string>
    <string name="errorMaxSessions">You have hit the maximum number of simultaneous connections allowed for your account. Please upgrade your Proton VPN plan to get more connections.</string>
    <string name="listItemMaintenance">Under maintenance</string>
    <string name="insufficientPermissionsTitle">User action required</string>
    <string name="insufficientPermissionsDetails">Couldn\'t establish VPN connection automatically. Please connect manually one time to grant permissions.</string>
    <string name="log_title">Log</string>
    <string name="disconnect">Disconnect</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnecting">Disconnecting…</string>
    <string name="state_error">Error</string>
    <string name="error_server_list_load_failed">Please check your connection and try again.</string>
    <string name="error_server_unreachable">Couldn\'t connect to the VPN. Please check your connection and try again.</string>
    <string name="error_peer_auth_failed">@string/error_server_unreachable</string>
    <string name="error_auth_failed">User authentication failed.</string>
    <string name="error_generic">Unspecified failure while connecting.</string>
    <string name="error_generic_with_reason">Proton VPN could not establish a VPN connection. Please, try again in few seconds.<br/><br/> Details: %1$s</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_now">Reconnect now</string>
    <string name="try_reconnecting">Try reconnecting</string>
    <string name="connect">Connect</string>
    <string name="upgrade">Upgrade</string>
    <string name="retry">Retry</string>
    <string name="report_message">Report message</string>
    <string name="report_bug_email_label">Your email</string>
    <string name="report_bug_email_hint">Enter your email address</string>
    <string name="report_bug_message_label">Message</string>
    <string name="report_bug_message_hint">Please describe the bug and how and where you found it</string>
    <string name="send_report">Send report</string>
    <string name="report_sent">Report sent</string>
    <string name="discardChanges">Discard unsaved changes?</string>
    <string name="discardChangesButtonDiscard">Discard changes</string>
    <string name="discardChangesButtonKeepEditing">Keep editing</string>
    <string name="done">DONE</string>
    <string name="add">ADD</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="got_it">Got it</string>
    <string name="exclude_locations">Exclude locations</string>
    <string name="excluded_locations">Excluded locations</string>
    <string name="cannot_connect">Cannot connect</string>
    <string name="skip">Skip</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="delete">Delete</string>
    <string name="menu_option_move_to_top" comment="command used to move an item to the top of the list">Move to top</string>
    <string name="menu_option_move_up" comment="command used to move an item one position up in the list">Move up</string>
    <string name="menu_option_move_down" comment="command used to move an item one position down in the list">Move down</string>
    <string name="remove">Remove</string>
    <string name="saveButton">Save</string>
    <string name="ipWithPlaceholder">IP: %1$s</string>
    <string name="activityLicensesTitle">Third party licenses</string>
    <string name="stateFragmentUnknownIp">Unknown</string>
    <string name="noVpnPermissionMainTitle">Action needed to connect to VPN</string>
    <string name="noVpnPermissionMainMessage">To connect to Proton VPN, please do the following:</string>
    <string name="noVpnPermissionGrantPermissionTitle">Grant VPN permission</string>
    <string name="noVpnPermissionGrantPemrissionMessage">Android needs your permission to connect to Proton VPN. Grant it by tapping \"OK\" when you get the \"Connection request\" window from Android.</string>
    <string name="noVpnPermissionDisableAlwaysOnTitle">Disable always-on for other VPN apps</string>
    <string name="noVpnPermissionDisableAlwaysOnMessage">Android does not support multiple VPN apps. Disable always-on for any VPN app other than Proton VPN.</string>
    <string name="noVpnPermissionProtonAppLabel">Proton VPN app</string>
    <string name="noVpnPermissionOtherAppLabel">Other VPN apps</string>
    <string name="noVpnPermissionOpenSettings">Open Android VPN settings</string>
    <string name="noNotificationPermissionGrantTitle">Don’t get caught out…</string>
    <string name="noNotificationPermissionGrantDescription">Enable notifications to get alerted about changes to your connection status.</string>
    <string name="noNotificationPermissionGrantNowTitle">Enable notifications</string>
    <string name="error_prepare_vpn_description"><![CDATA[Please disable always-on VPN for all other VPN apps in the Android VPN system settings, as that prevents Proton VPN from establishing a VPN connection. Please also grant VPN permissions if a dialog requesting VPN permissions appears. Other VPN apps may also need to be uninstalled to prevent conflicts. Afterwards, please try again. <a href="%1$s">Learn more</a>]]></string>
    <string name="error_prepare_vpn_settings">Go to Android VPN settings</string>
    <string name="inputIpAddressLabel">IP address</string>
    <string name="inputIpAddressHintIP" translatable="false">192.0.2.0</string>
    <string name="inputIpAddressHelp">Enter the server’s IPv4 or IPv6 address</string>
    <string name="troubleshootNoInternetDescription">Please make sure your internet connection is working.</string>
    <string name="troubleshootNoInternetTitle">No internet connection</string>
    <string name="troubleshootIspProblemTitle">Internet Service Provider (ISP) problem</string>
    <string name="troubleshootIspProblemDescription"><![CDATA[Try connecting to Proton from a different network (or use <a href=\'%1$s\'>Tor</a>)]]></string>
    <string name="troubleshootAntivirusProblemTitle">Antivirus interference</string>
    <string name="troubleshootAntivirusProblemDescription">Temporarily disable or remove your antivirus software.</string>
    <string name="troubleshootProxyFirewallProblemTitle">Proxy/Firewall interference</string>
    <string name="troubleshootProxyFirewallProblemDescription">Disable any proxies or firewalls, or contact your network administrator.</string>
    <string name="troubleshootProtonDownTitle">Proton is down</string>
    <string name="troubleshootProtonDownDescription"><![CDATA[Check <a href=\"%1$s\">Proton Status</a> for our system status.]]></string>
    <string name="settingsAllowAlternativeRoutingTitle">Alternative routing</string>
    <string name="settingsAllowAlternativeRoutingDescription"><![CDATA[In case Proton is blocked, allow app to try alternative paths to reach Proton servers. <a href="%1$s">Learn more</a>.]]></string>
    <string name="troubleshootGovernmentBlockTitle">Government block</string>
    <string name="troubleshootGovernmentBlockDescription"><![CDATA[Your country may be blocking access to Proton. Try using <a href=\'%1$s\'>Tor</a> to access Proton.]]></string>
    <string name="settingsEnableTelemetryTitle">Share anonymous usage statistics</string>
    <string name="settingsEnableTelemetryDescription">Usage data helps us overcome VPN blocks and improve app performance.</string>
    <string name="settingsSendCrashReportsTitle">Share anonymous crash reports</string>
    <string name="settingsSendCrashReportsDescription">Crash reports help us fix bugs, detect firewalls, and avoid VPN blocks.</string>
    <string name="settingsTelemetryScreenInfo"><![CDATA[These statistics do not contain your IP address, and they cannot be used to identify you. We\'ll never share them with third parties. <a href="%1$s">Learn more</a>]]></string>
    <string name="dynamic_report_logs_title">Send error logs</string>
    <string name="dynamic_report_logs_description">A log is a type of file that shows us the actions you took that led to an error. We’ll only ever use them to help our engineers fix bugs.</string>
    <string name="dynamic_report_logs_missing">Error logs help us to get to the bottom of your issue. If you don’t include them, we might not be able to investigate fully.</string>
    <string name="dynamic_report_step3">Step 3 of 3</string>
    <string name="dialog_create_account_action_create">Create account</string>
    <string name="dialog_create_account_action_signin">Sign in</string>
    <string name="dialog_action_cancel">Cancel</string>
</resources>