<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2023. Proton AG

  This file is part of ProtonVPN.

  ProtonVPN is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  ProtonVPN is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.protonvpn.android.ui.settings.SettingsSwitch
        android:id="@+id/switchEnableTelemetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settingsEnableTelemetryTitle"
        app:infoText="@string/settingsEnableTelemetryDescription" />

    <com.protonvpn.android.ui.settings.SettingsSwitch
        android:id="@+id/switchSendCrashReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settingsSendCrashReportsTitle"
        app:infoText="@string/settingsSendCrashReportsDescription" />

    <TextView
        style="@style/Proton.Text.Caption.Hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding_horizontal"
        android:layout_marginVertical="8dp"
        android:text="@string/settingsTelemetryScreenInfo"/>

</LinearLayout>
