<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2021 Proton Technologies AG

 This file is part of ProtonVPN.

 ProtonVPN is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ProtonVPN is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        style="@style/ProtonLinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="100" />

    <TextView
        style="@style/Proton.Text.DefaultSmall.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/dynamic_report_step3"
        android:textColor="?attr/proton_text_accent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_padding_horizontal"
            android:orientation="vertical">

            <me.proton.core.presentation.ui.view.ProtonInput
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/report_bug_email_hint"

                app:label="@string/report_bug_email_label" />

            <LinearLayout
                android:id="@+id/dynamicContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <me.proton.core.presentation.ui.view.ProtonCheckbox
                android:id="@+id/checkboxIncludeLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dynamic_report_logs_title" />

            <TextView
                style="@style/Proton.Text.Caption.Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_medium"
                android:text="@string/dynamic_report_logs_description" />

            <LinearLayout
                android:id="@+id/layoutMissingLogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_large"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/ic_proton_info_circle"
                    app:tint="?attr/proton_icon_weak" />

                <TextView
                    style="@style/Proton.Text.Caption.Weak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamic_report_logs_missing" />

            </LinearLayout>


            <me.proton.core.presentation.ui.view.ProtonProgressButton
                android:id="@+id/buttonReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="24dp"
                android:text="@string/send_report" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>
