<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2021. Proton AG

  This file is part of ProtonVPN.

  ProtonVPN is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  ProtonVPN is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar"
        layout="@layout/content_appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_padding_horizontal"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <me.proton.core.presentation.ui.view.ProtonInput
            android:id="@+id/inputIp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputIpAddressHintIP"
            android:imeOptions="actionDone"
            app:editTextDirection="ltr"
            app:label="@string/inputIpAddressLabel"
            tools:help="@string/inputIpAddressHelp" />

        <ImageButton
            android:id="@+id/buttonAdd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_selectable_item_bg"
            android:contentDescription="@string/add"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_proton_plus_circle_filled"
            app:tint="@color/icon_norm_selector" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_selected_ips"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
