<!--
 Copyright (c) 2021 Proton Technologies AG

 This file is part of ProtonVPN.

 ProtonVPN is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 ProtonVPN is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutConnectionAllocationHelp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/proton_background_norm"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_padding_horizontal"
    android:paddingBottom="24dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/assign_vpn_connection" />

            <TextView
                style="@style/Proton.Text.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/connectionAllocationHelpTitle" />

            <TextView
                style="@style/Proton.Text.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:text="@string/connectionAllocationHelpDescription1"/>

            <TextView
                style="@style/Proton.Text.DefaultSmall.Weak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/connectionAllocationHelpDescription2"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <me.proton.core.presentation.ui.view.ProtonButton
        android:id="@+id/buttonAssignVpnConnections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/connectionAllocationHelpAssignConnectionsButton" />

    <me.proton.core.presentation.ui.view.ProtonButton
        android:id="@+id/buttonReturnToLogin"
        style="@style/ProtonButton.Borderless.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/connectionAllocationHelpLoginAgainButton" />
</LinearLayout>
