<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2024. Proton AG

  This file is part of ProtonVPN.

  ProtonVPN is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  ProtonVPN is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end"
    android:paddingHorizontal="24dp"
    android:paddingBottom="24dp">

    <me.proton.core.presentation.ui.view.ProtonButton
        android:id="@+id/buttonCreateAccount"
        style="@style/ProtonButton.Borderless.Text.NoProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="12dp"
        android:text="@string/dialog_create_account_action_create"/>

    <me.proton.core.presentation.ui.view.ProtonButton
        android:id="@+id/buttonSignIn"
        style="@style/ProtonButton.Borderless.Text.NoProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="12dp"
        android:text="@string/dialog_create_account_action_signin"/>

    <me.proton.core.presentation.ui.view.ProtonButton
        android:id="@+id/buttonCancel"
        style="@style/ProtonButton.Borderless.Text.NoProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="12dp"
        android:text="@string/dialog_action_cancel"/>

</LinearLayout>
